[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/HUDLayer.gd" type="Script" id=1]
[ext_resource path="res://UI/icons/spines.png" type="Texture" id=2]
[ext_resource path="res://UI/fonts/connection_ii/ConnectionII.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/icons/coins.png" type="Texture" id=4]
[ext_resource path="res://UI/icons/cacti.png" type="Texture" id=5]
[ext_resource path="res://UI/icons/poachers.png" type="Texture" id=6]
[ext_resource path="res://UI/BuildBar/building_buttongroup.tres" type="ButtonGroup" id=7]
[ext_resource path="res://UI/theme.tres" type="Theme" id=8]
[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=9]

[node name="HUDLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ResourceBar" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -206.0
margin_top = 8.0
margin_right = 206.0
margin_bottom = 40.0

[node name="TextureSpines" type="TextureRect" parent="ResourceBar"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="LabelSpines" type="Label" parent="ResourceBar"]
margin_left = 36.0
margin_right = 100.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
custom_fonts/font = ExtResource( 3 )
text = "x0"
valign = 1

[node name="TextureCoins" type="TextureRect" parent="ResourceBar"]
margin_left = 104.0
margin_right = 136.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="LabelCoins" type="Label" parent="ResourceBar"]
margin_left = 140.0
margin_right = 204.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
custom_fonts/font = ExtResource( 3 )
text = "x0"
valign = 1

[node name="TextureCacti" type="TextureRect" parent="ResourceBar"]
margin_left = 208.0
margin_right = 240.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="LabelCacti" type="Label" parent="ResourceBar"]
margin_left = 244.0
margin_right = 308.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
custom_fonts/font = ExtResource( 3 )
text = "x0"
valign = 1

[node name="TexturePoachers" type="TextureRect" parent="ResourceBar"]
margin_left = 312.0
margin_right = 344.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="LabelPoachers" type="Label" parent="ResourceBar"]
margin_left = 348.0
margin_right = 412.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
custom_fonts/font = ExtResource( 3 )
text = "x0"
valign = 1

[node name="BuildBar" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
alignment = 2

[node name="SeederButton" type="Button" parent="BuildBar"]
margin_left = 797.0
margin_right = 853.0
margin_bottom = 20.0
toggle_mode = true
group = ExtResource( 7 )
text = "Seeder"

[node name="GrowerButton" type="Button" parent="BuildBar"]
margin_left = 857.0
margin_right = 915.0
margin_bottom = 20.0
toggle_mode = true
group = ExtResource( 7 )
text = "Grower"

[node name="ShooterButon" type="Button" parent="BuildBar"]
margin_left = 919.0
margin_right = 980.0
margin_bottom = 20.0
toggle_mode = true
group = ExtResource( 7 )
text = "Shooter"

[node name="LureButton" type="Button" parent="BuildBar"]
margin_left = 984.0
margin_right = 1024.0
margin_bottom = 20.0
toggle_mode = true
group = ExtResource( 7 )
text = "Lure"

[node name="PauseMenu" type="PopupPanel" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -672.0
margin_top = -388.0
margin_right = -352.0
margin_bottom = -228.0
rect_min_size = Vector2( 320, 160 )
theme = ExtResource( 8 )
popup_exclusive = true
script = ExtResource( 9 )

[node name="Label" type="Label" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
text = "Pause"
align = 1
valign = 1

[connection signal="button_up" from="BuildBar/SeederButton" to="." method="_on_SeederButton_button_up"]
[connection signal="button_up" from="BuildBar/GrowerButton" to="." method="_on_GrowerButton_button_up"]
[connection signal="button_up" from="BuildBar/ShooterButon" to="." method="_on_ShooterButon_button_up"]
[connection signal="button_up" from="BuildBar/LureButton" to="." method="_on_LureButton_button_up"]
